[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/CharacterCards/CloakEyesOpen.png" type="Texture" id=1]
[ext_resource path="res://UI/CharacterCards/ForDunDialogue.gd" type="Script" id=2]
[ext_resource path="res://UI/CharacterCards/CloakEyes.png" type="Texture" id=3]
[ext_resource path="res://Effects/light.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "shine",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "wake",
"speed": 10.0
} ]

[node name="ForDunDialogueScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 324.0
margin_bottom = 182.0
color = Color( 0.141176, 0.117647, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CloakEyes" type="AnimatedSprite" parent="."]
position = Vector2( 160, 33 )
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
animation = "idle"
playing = true

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 96, 40 )
texture = ExtResource( 4 )
texture_scale = 0.2
color = Color( 0.815686, 0.054902, 0.054902, 1 )
energy = 1.37

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( 232, 40 )
texture = ExtResource( 4 )
texture_scale = 0.2
color = Color( 0.815686, 0.054902, 0.054902, 1 )
energy = 1.37
[connection signal="animation_finished" from="CloakEyes" to="." method="_on_CloakEyes_animation_finished"]
